# qutemol

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  code_review_request.txt
.agents/skills/qutemol/: SKILL.md
.agents/skills/qutemol/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: update-build-system-and-ci.md
.claude/homunculus/instincts/inherited/: qutemol-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: cmake-multi-platform.yml
src/: AO.cpp  AO.h  AOgpu.cpp  AOgpu.h  AtomColor.cpp  AtomColor.h  CgUtil.cpp  CgUtil.h  Common.cpp  Common.h  CubeMapSamp.h  HardSettings.cpp  HardSettings.h  Mol.cpp  Mol.h  MyCanvas.cpp  MyCanvas.h  MyTab.cpp  MyTab.h  OctaMapSamp.h  Sampling.cpp  ShadowMap.cpp  ShadowMap.h  gen_normal.h  gifSave.cpp  gifSave.h  main.cpp  main.h  main_header_fix.txt  pngSave.cpp  pngSave.h  progress.cpp  progress.h  qopengl.h  saveSnapDialog.cpp  saveSnapDialog.h  wx_trackball.cpp
